# max-vps

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  session.py
backend/scripts/: init_db.sql
backend/tests/: test_config.py  test_main.py
bot/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  requirements.txt  run.py
bot/bot/: main.py
bot/bot/alembic/: env.py
bot/bot/alembic/versions/: a49e02c95e80_general_migrate.py  ba7a3ffb8d04_add_ref_user.py  c3f8a1d20e91_add_api_token_to_servers.py  d7a4b2c1e9f3_add_sub_path_to_servers.py  e7152afbe174_add_auto_work.py  fba5ae3d6764_add_table_not_keys.py
bot/bot/database/: __init__.py  main.py
bot/bot/database/importBD/: import_BD.py
bot/bot/database/methods/: delete.py  get.py  insert.py  update.py
bot/bot/database/models/: main.py
bot/bot/filters/: check_follow.py  is_private.py  main.py
bot/bot/handlers/admin/: group_mangment.py  keys_control.py  location_control.py  main.py  metric_management.py  protocol_control.py  referal_admin.py  static_user_control.py  user_management.py
bot/bot/handlers/other/: main.py
bot/bot/handlers/user/: free_vpn.py  keys_user.py  main.py  payment_user.py  referral_user.py
bot/bot/keyboards/inline/: admin_inline.py  user_inline.py
bot/bot/keyboards/reply/: admin_reply.py
bot/bot/locale/en/LC_MESSAGES/: bot.po
bot/bot/locale/ru/LC_MESSAGES/: bot.po
bot/bot/middlewares/: session.py
bot/bot/misc/: callbackData.py  language.py  loop.py  nats_connect.py  start_consumers.py  util.py
bot/bot/misc/Payment/: CryptoBot.py  Cryptomus.py  FreeKassaBeta.py  KassaSmart.py  Lava.py  Stars.py  Tinkoff.py  Wawa.py  YooMoney.py  payment_systems.py
bot/bot/misc/VPN/: BaseVpn.py  ServerManager.py
bot/bot/misc/VPN/Xui/: Vless.py  XuiApiClient.py  XuiBase.py
bot/bot/misc/remove_key_servise/: consumer.py  publisher.py  remove_task.py
bot/bot/service/: create_file_str.py  edit_message.py  excel_service.py  send_dump.py  server_controll_manager.py  service.py
bot/landing/: index.html  script.js  style.css
bot/nats/: migration.py  nats.conf
docs/: ARCHITECTURE.md  DESIGN_REFERENCE.md  FLUTTER_WEB.md
