[project]
name = "maxvps-backend"
version = "0.1.0"
description = "MAX VPS - FastAPI backend for VPN sales site"
requires-python = ">=3.11"
dependencies = [
    # === Web framework ===
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # === Database ===
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",  # for tests

    # === Auth ===
    "pyjwt>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",

    # === HTTP ===
    "httpx>=0.28.0",
    # aiohttp не нужен явно — aiogram подтянет свою версию

    # === Cache / Rate limit ===
    "redis>=5.2.0",
    "slowapi>=0.1.9",

    # === Utils ===
    "python-dotenv>=1.0.1",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "cryptography>=43.0.0",
    "qrcode[pil]>=8.0",

    # === Telegram ===
    "aiogram>=3.15.0",
    "aiohttp>=3.11.0",

    # === Monitoring ===
    "prometheus-client>=0.21.0",
    "sentry-sdk[fastapi]>=2.18.0",

    # === Date/Time ===
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "bandit>=1.7.10",
    "semgrep>=1.85.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config -v --cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "RUF",  # ruff-specific
]
ignore = [
    "S101",  # Use of assert detected (fine in tests)
    "E501",  # Line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
